# dpo2u-solana

./: .env.example  .gitignore  CHANGELOG.md  ONBOARDING.md  README.md  TEAM.md
.github/ISSUE_TEMPLATE/: devs-feedback.md
.github/workflows/: ci.yml
apps/cloak-bridge/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
apps/cloak-bridge/src/analyzers/: base.ts  lgpd-retention.ts  micar-art23.ts  micar-art36.ts
apps/cloak-bridge/src/cloak/: client.ts  types.ts
docs/: ADR-001-jito-ncn-operator-endorsement.md  DEMO-COMPOSED-STACK.md  DEMO.md  GOVERNANCE.md  HACKATHON.md  HANDOFF-EMAIL.md  PITCH.md  REVIEW.md  TEST-RESULTS.md  WALKTHROUGH.md  cu-benchmark.md  devnet-deployments.md
examples/: README.md  quickstart-js.mjs  quickstart-mcp.md  quickstart-rest.sh
examples/quickstart-rust/: Cargo.toml
examples/quickstart-rust/src/: main.rs
inspector/: package-lock.json  package.json
inspector/src/: static-analyzer.ts  witness-compiler.ts
scripts/: b25-honest-halt.ts  b25-mint-and-reserve.ts  b25-revert.ts  cmt-config.json  demo-4-fronts.sh  deploy-devnet.sh  init-art-vault-devnet.ts  init-ccpa-demo-devnet.ts  init-cmt.ts  init-knightshield-attestation-devnet.ts  init-pipa-ready-devnet.ts  init-pipeda-demo-devnet.ts  init-popia-demo-devnet.ts  members.example.json  scan-knightshield-multi.ts  setup-squads-multisig.ts  smoke-composed-flow.ts  smoke-mcp-composed.ts  squads-config.json  squads-upgrade-test.ts  test-rapporteur-init.ts  transfer-program-authorities.ts  unblock-audit.sh
scripts/demo/: assemble-demo.sh  build-cards.sh  composed-terminal-demo.sh  frente-2-audit.mts  frente-3-aiverify.mts  frente-4-compare.mts  ks-terminal-demo.sh  record-composed-demo.sh  record-ks-demo.sh
solana-programs/: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
solana-programs/programs/agent-registry/: Cargo.toml
solana-programs/programs/agent-registry/src/: lib.rs
solana-programs/programs/agent-wallet-factory/: Cargo.toml
solana-programs/programs/agent-wallet-factory/src/: lib.rs
solana-programs/programs/aiverify-attestation/: Cargo.toml
solana-programs/programs/aiverify-attestation/src/: lib.rs
solana-programs/programs/art-vault/: Cargo.toml
solana-programs/programs/art-vault/src/: lib.rs
solana-programs/programs/ccpa-optout-registry/: Cargo.toml
solana-programs/programs/ccpa-optout-registry/src/: lib.rs
solana-programs/programs/compliance-registry/: Cargo.toml
solana-programs/programs/compliance-registry-pinocchio/: Cargo.toml
solana-programs/programs/compliance-registry-pinocchio/src/: lib.rs  light_proto.rs
solana-programs/programs/compliance-registry/src/: lib.rs
solana-programs/programs/consent-manager/: Cargo.toml
solana-programs/programs/consent-manager/src/: lib.rs
solana-programs/programs/fee-distributor/: Cargo.toml
solana-programs/programs/fee-distributor/src/: lib.rs
solana-programs/programs/hiroshima-ai-process-attestation/: Cargo.toml
solana-programs/programs/hiroshima-ai-process-attestation/src/: lib.rs
solana-programs/programs/payment-gateway/: Cargo.toml
solana-programs/programs/payment-gateway/src/: lib.rs
solana-programs/programs/pipa-korea-zk-identity/: Cargo.toml
solana-programs/programs/pipa-korea-zk-identity/src/: lib.rs
solana-programs/programs/pipeda-consent-extension/: Cargo.toml
solana-programs/programs/pipeda-consent-extension/src/: lib.rs
solana-programs/programs/popia-info-officer-registry/: Cargo.toml
solana-programs/programs/popia-info-officer-registry/src/: lib.rs
solana-programs/src/solana/idl/: compliance_registry.json
solana-programs/tests/: README.md  aiverify.test.ts  art-vault.test.ts  ccpa-optout-runtime.test.ts  ccpa-optout.test.ts  composed-leaf.test.ts  consent-manager-runtime.test.ts  consent-manager.test.ts  erasure.test.ts  helpers.ts  hiroshima-ai-process-attestation.test.ts  pipa-korea-zk-identity.test.ts  pipeda-consent-extension.test.ts  pipeda-consent-runtime.test.ts  popia-info-officer-runtime.test.ts  popia-info-officer.test.ts  scaffolds.test.ts  spl-token-cpi.test.ts  verified-attestation-pinocchio.test.ts  verified-attestation.test.ts
sp1-solana/: .gitignore  Cargo.toml  README.md
sp1-solana/example/program/: Cargo.toml
sp1-solana/example/program/src/: lib.rs
sp1-solana/example/script/: Cargo.toml
sp1-solana/example/script/src/: main.rs
sp1-solana/verifier/src/: lib.rs  test.rs  utils.rs
sp1-solana/verifier/tests/: dpo2u_v6.rs
sp1-solana/verifier/tests/fixtures/: dpo2u_vkey.hex
zk-circuits/lib/: Cargo.toml
zk-circuits/lib/src/: lib.rs
zk-circuits/program/: Cargo.toml
zk-circuits/program/src/: main.rs
zk-circuits/proofs/: README.md
zk-circuits/script/: Cargo.toml
