[workspace]
resolver = "2"
members = [
  "programs/compliance-registry",
  "programs/agent-registry",
  "programs/payment-gateway",
  "programs/fee-distributor",
  "programs/agent-wallet-factory",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
