[workspace]
resolver = "2"
members = [
  "programs/compliance-registry",
  "programs/compliance-registry-pinocchio",
  "programs/agent-registry",
  "programs/payment-gateway",
  "programs/fee-distributor",
  "programs/agent-wallet-factory",
  "programs/consent-manager",
  "programs/art-vault",
  "programs/aiverify-attestation",
  "programs/popia-info-officer-registry",
  "programs/ccpa-optout-registry",
  "programs/pipeda-consent-extension",
  "programs/pipa-korea-zk-identity",
  "programs/hiroshima-ai-process-attestation",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
