[package]
name = "agent-wallet-factory"
version = "0.1.0"
description = "DPO2U Agent Wallet Factory — creates PDA-owned wallets for autonomous agents."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_wallet_factory"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
