[package]
name = "ccpa-optout-registry"
version = "0.1.0"
description = "DPO2U CCPA Opt-Out Registry — verifiable Do-Not-Sell/Share record per CCPA §1798.135 (California)."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ccpa_optout_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.1"
