[package]
name = "compliance-registry"
version = "0.1.0"
description = "DPO2U Compliance attestation registry — anchors DPIA/audit commitments."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliance_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
