[package]
name = "compliance-registry"
version = "0.1.0"
description = "DPO2U Compliance attestation registry — anchors DPIA/audit commitments."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "compliance_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
# Match the on-chain verifier's borsh version to keep the Borsh SP1Groth16Proof
# wire format consistent. See sp1-solana/Cargo.toml workspace dep.
borsh = "1.5.1"
