[package]
name = "consent-manager"
version = "0.1.0"
description = "DPO2U DPDP India Consent Manager — on-chain consent registry with optional ZK binding via SP1 verifier."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "consent_manager"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.1"
