[package]
name = "hiroshima-ai-process-attestation"
version = "0.1.0"
description = "DPO2U Hiroshima AI Process Attestation — voluntary on-chain attestation of CAIO appointment, red team evidence, ICOC commitment, AIBOG alignment, and data quality docs aligned to G7 Hiroshima AI Process + Japan AI Promotion Act 2025 + AISI/AIST guidance."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hiroshima_ai_process_attestation"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.1"
