[package]
name = "pipeda-consent-extension"
version = "0.1.0"
description = "DPO2U PIPEDA Consent Extension — granular consent records aligned to PIPEDA Schedule 1 Principle 4 + Digital Privacy Act §10.1 (Canada federal)."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pipeda_consent_extension"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.1"
