[package]
name = "popia-info-officer-registry"
version = "0.1.0"
description = "DPO2U POPIA Information Officer Registry — on-chain register of formal IO appointments per POPIA §55 (South Africa)."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "popia_info_officer_registry"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
borsh = "1.5.1"
